# webapp

./: .env  CHANGELOG.md  Cargo.toml
__openspec/changes/web-application/: design.md  proposal.md  tasks.md
openspec/changes/backend-http-layer-tests/: tasks.md
openspec/changes/backend-integrate-logger-service/: design.md  proposal.md  tasks.md
openspec/changes/backend-remove-arc/: design.md  proposal.md
openspec/changes/backend-user-info-text-summary/: design.md  tasks.md
openspec/changes/database/: proposal.md  tasks.md
openspec/changes/database-create-dedicated-user/: design.md
openspec/changes/database-split-users-table/: tasks.md
openspec/changes/rust-user-service/: tasks.md
openspec/changes/simplify-web-ui-to-static-html/: design.md  tasks.md
openspec/specs/ui-login/: spec.md
src/: .env  Cargo.toml  README.md
src/database/: 01_users_schema.sql  04_test_suite.sql  05_security_tests.sh  README.md
src/rust/: README.md  db.rs  logger.rs  main.rs  user_info_formatter.rs
src/rust/tests/: README.md  handler_tests.rs  main_test.rs  user_info_formatter_test.rs
src/web/: README.md  create-user.html  index.html  login.html  package-lock.json  package.json  style.css  user-info.html  vite.config.ts
src/web/src/: App.css  App.tsx  index.css  types.ts
src/web/src/components/: FormComponents.tsx  Layout.tsx
src/web/src/pages/: CreateUserPage.tsx  LoginPage.tsx  UserInfoPage.tsx
src/web/src/test/: App.test.tsx  CreateUserPage.test.tsx  LoginPage.test.tsx  UserInfoPage.test.tsx  api.test.ts  storage.test.ts
src/web/src/utils/: api.ts  storage.ts
(+91 files in other folders)
