[package]
name = "rust_user_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_user_service"
path = "rust/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
